--- a/package/package.json
+++ b/package/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "mui-daterange-picker",
-    "version": "1.0.5",
-    "description": "A react date range picker implementation using @mui.",
+    "name": "charlla-daterange-picker",
+    "version": "1.0.14",
+    "description": "Charlla Console Date Range Picker",
     "author": "HyeonD",
     "license": "MIT",
     "repository": "HyeonD/mui-daterange-picker",
