--- a/package/package.json
+++ b/package/package.json
@@ -82,7 +82,8 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
-        "@babel/runtime": "^7.16.7"
+        "@babel/runtime": "^7.16.7",
+        "moment": "^2.29.4"
     },
     "keywords": [
         "react",
