--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
     "name": "charlla-daterange-picker",
-    "version": "1.0.21",
+    "version": "1.0.22",
     "description": "Charlla Console Date Range Picker",
     "author": "HyeonD",
     "license": "MIT",
@@ -20,14 +20,14 @@
     },
     "peerDependencies": {
         "@babel/runtime": "^7.16.7",
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
-        "@mui/icons-material": "^5.11.16",
-        "@mui/material": "^5.12.1",
-        "@mui/system": "^5.0.6",
-        "date-fns": "^2.28.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.17",
+        "@mui/material": "^5.15.17",
+        "@mui/system": "^5.15.15",
+        "date-fns": "^3.6.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
         "@babel/core": "^7.16.7",
@@ -51,10 +51,10 @@
         "@babel/plugin-transform-runtime": "^7.16.7",
         "@babel/preset-env": "^7.16.7",
         "@babel/preset-react": "^7.16.7",
-        "@emotion/react": "^11.7.1",
-        "@emotion/styled": "^11.6.0",
-        "@mui/icons-material": "^5.0.4",
-        "@mui/material": "^5.2.6",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.17",
+        "@mui/material": "^5.15.17",
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-commonjs": "^21.0.1",
         "@rollup/plugin-node-resolve": "^13.1.2",
@@ -66,16 +66,16 @@
         "@typescript-eslint/parser": "^5.8.1",
         "babel-eslint": "^10.1.0",
         "cross-env": "^7.0.3",
-        "date-fns": "^2.28.0",
+        "date-fns": "^3.6.0",
         "eslint": "^8.6.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "react": "^17.0.2",
-        "react-dom": "17.0.2",
-        "react-scripts": "^5.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-scripts": "5.0.1",
         "rollup": "^2.62.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-typescript2": "^0.31.1",
