--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,11 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["./package/src"],
-  "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
+  "include": [
+      "./package/src",
+      "../challa-console/node_modules/date-fns/typings.d.ts"
+  ],
+    "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
 }
