daterangepicker story book

--- a/package/package.json
+++ b/package/package.json
@@ -16,7 +16,9 @@
         "lint": "./node_modules/.bin/eslint ./src --ext .js,.jsx,.ts,.tsx",
         "build": "rollup -c",
         "copy_publish_files": "cp ../README.md .",
-        "prepublish": "yarn run build && yarn run copy_publish_files"
+        "prepublish": "yarn run build && yarn run copy_publish_files",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "peerDependencies": {
         "@babel/runtime": "^7.16.7",
@@ -26,77 +28,84 @@
         "@mui/material": "^5.15.17",
         "@mui/system": "^5.15.15",
         "date-fns": "^3.6.0",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.7",
-        "@babel/plugin-external-helpers": "^7.16.7",
-        "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/plugin-proposal-decorators": "^7.16.7",
-        "@babel/plugin-proposal-do-expressions": "^7.16.7",
-        "@babel/plugin-proposal-export-default-from": "^7.16.7",
-        "@babel/plugin-proposal-export-namespace-from": "^7.16.7",
-        "@babel/plugin-proposal-function-bind": "^7.16.7",
-        "@babel/plugin-proposal-function-sent": "^7.16.7",
-        "@babel/plugin-proposal-json-strings": "^7.16.7",
-        "@babel/plugin-proposal-logical-assignment-operators": "^7.16.7",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.16.7",
-        "@babel/plugin-proposal-numeric-separator": "^7.16.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-        "@babel/plugin-proposal-pipeline-operator": "^7.16.7",
-        "@babel/plugin-proposal-throw-expressions": "^7.16.7",
-        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+        "@babel/core": "^7.24.5",
+        "@babel/eslint-parser": "^7.24.5",
+        "@babel/plugin-external-helpers": "^7.24.1",
+        "@babel/plugin-proposal-decorators": "^7.24.1",
+        "@babel/plugin-proposal-do-expressions": "^7.24.1",
+        "@babel/plugin-proposal-export-default-from": "^7.24.1",
+        "@babel/plugin-proposal-function-bind": "^7.24.1",
+        "@babel/plugin-proposal-function-sent": "^7.24.1",
+        "@babel/plugin-proposal-throw-expressions": "^7.24.1",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-syntax-import-meta": "^7.10.4",
-        "@babel/plugin-transform-runtime": "^7.16.7",
-        "@babel/preset-env": "^7.16.7",
-        "@babel/preset-react": "^7.16.7",
+        "@babel/plugin-transform-class-properties": "^7.24.1",
+        "@babel/plugin-transform-export-namespace-from": "^7.24.1",
+        "@babel/plugin-transform-json-strings": "^7.24.1",
+        "@babel/plugin-transform-logical-assignment-operators": "^7.24.1",
+        "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.1",
+        "@babel/plugin-transform-numeric-separator": "^7.24.1",
+        "@babel/plugin-transform-optional-chaining": "^7.24.1",
+        "@babel/plugin-transform-runtime": "^7.24.3",
+        "@babel/preset-env": "^7.24.5",
+        "@babel/preset-react": "^7.24.1",
+        "@babel/runtime": "^7.16.7",
+        "@chromatic-com/storybook": "^1.4.0",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "@fontsource/material-icons": "^5.0.18",
+        "@fontsource/roboto": "^5.0.13",
         "@mui/icons-material": "^5.15.17",
         "@mui/material": "^5.15.17",
-        "@rollup/plugin-babel": "^5.3.0",
-        "@rollup/plugin-commonjs": "^21.0.1",
-        "@rollup/plugin-node-resolve": "^13.1.2",
+        "@mui/system": "^5.15.15",
+        "@rollup/plugin-babel": "^5.3.1",
+        "@rollup/plugin-commonjs": "^21.1.0",
+        "@rollup/plugin-node-resolve": "^13.3.0",
         "@rollup/plugin-url": "^6.1.0",
-        "@types/jest": "^27.4.0",
-        "@types/lodash.isequal": "^4.5.5",
-        "@types/react": "^17.0.38",
-        "@typescript-eslint/eslint-plugin": "^5.8.1",
-        "@typescript-eslint/parser": "^5.8.1",
-        "babel-eslint": "^10.1.0",
+        "@storybook/addon-essentials": "^8.1.1",
+        "@storybook/addon-interactions": "^8.1.1",
+        "@storybook/addon-links": "^8.1.1",
+        "@storybook/addon-onboarding": "^8.1.1",
+        "@storybook/addon-themes": "^8.1.1",
+        "@storybook/blocks": "^8.1.1",
+        "@storybook/react": "^8.1.1",
+        "@storybook/react-vite": "^8.1.1",
+        "@storybook/test": "^8.1.1",
+        "@types/jest": "^29.5.12",
+        "@types/lodash": "^4.17.1",
+        "@types/lodash.isequal": "^4.5.8",
+        "@types/react": "^17.0.80",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "@typescript-eslint/parser": "^5.62.0",
         "cross-env": "^7.0.3",
         "date-fns": "^3.6.0",
-        "eslint": "^8.6.0",
+        "eslint": "^8.57.0",
         "eslint-config-airbnb": "^19.0.4",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-jsx-a11y": "^6.8.0",
+        "eslint-plugin-react": "^7.34.1",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-storybook": "^0.8.0",
+        "jest": "^29.7.0",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-scripts": "5.0.1",
-        "rollup": "^2.62.0",
+        "rollup": "^2.79.1",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-typescript2": "^0.31.1",
-        "typescript": "^4.5.4"
+        "rollup-plugin-typescript2": "^0.31.2",
+        "storybook": "^8.1.1",
+        "typescript": "^4.9.5"
     },
     "dependencies": {
-        "@babel/runtime": "^7.16.7",
-        "moment": "^2.29.4"
+        "@babel/runtime": "^7.24.5"
     },
-    "keywords": [
-        "react",
-        "component",
-        "react-components",
-        "date-range",
-        "date",
-        "range",
-        "picker",
-        "material-design",
-        "material",
-        "typescript",
-        "npm",
-        "package"
-    ]
+    "keywords": []
 }
