--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@storybook/react": "^8.1.1",
         "@storybook/react-vite": "^8.1.1",
         "@storybook/test": "^8.1.1",
+        "@svgr/rollup": "^8.1.0",
         "@types/jest": "^29.5.12",
         "@types/lodash": "^4.17.1",
         "@types/lodash.isequal": "^4.5.8",
