--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "allowSyntheticDefaultImports": true
   },
   "include": [
-      "./package/src",
-      "../challa-console/node_modules/date-fns/typings.d.ts"
+      "./src",
   ],
     "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
 }
